# try-for-c

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: TryForCConfig.cmake  try.h.in
test/: CMakeLists.txt  enum_test.c  error_codes.h  int_test.c  multiple_int_test.c  struct_error.c  struct_error.h  struct_error_test.c  try_int_to_enum.c
